Bug 450986 - new pinned launcher appears on all unique tasks
Summary: new pinned launcher appears on all unique tasks
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-01 01:47 UTC by ryu.ketsueki
Modified: 2022-03-05 13:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ryu.ketsueki 2022-03-01 01:47:55 UTC
SUMMARY
In my Layout, I have two tasks on the dock, so I can have a plasmoid in the middle, usually in the form of a App Dashboard. Both tasks are defined as unique groups, this way they can have different launchers instead of being a copy of one another. on X11, they behave as expected, and that is why I had this layout for so long. But after moving to Wayland, if I pin a new launcher to one of the tasks, it is pinned to both. If I unpin from one of them, it unpins from both. It completely defeats the purpose of having two different tasks defined as unique groups.

STEPS TO REPRODUCE
Have two tasks on the same dock defined as unique groups. Pin a launcher on one of them

OBSERVED RESULT
The launcher is pinned on both tasks instead of the one I pinned it on

EXPECTED RESULT
The launcher to be pinned on only one task

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220224
KDE Plasma Version: 5.24.2
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.10-1-default (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i3-7020U CPU @ 2.30GHz
Memory: 11.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2022-03-04 08:00:06 UTC
do you stlll have that issue with master version? is it possible to test master version?
Comment 2 ryu.ketsueki 2022-03-04 22:15:44 UTC
(In reply to Michail Vourlakos from comment #1)
> do you stlll have that issue with master version? is it possible to test
> master version?

I just cloned from the Github repo and compiled, so I'm on master. It still happens
Comment 3 Michail Vourlakos 2022-03-05 07:56:56 UTC
Some feedback why this occurs in master version. So idea why it also breaks
Comment 4 Michail Vourlakos 2022-03-05 07:59:06 UTC
Some feedback why this occurs in master version. So idea why it also breaks for stable v0.10.7 . I will try to fix it for git version. Git version currently supports Clones of docks and panels in order to support dock OnAllScreens and OnAllSecondaryScreens. So the applets groupid needs to be updated in order to take into account the clones infrastructure. Probably applet.groupId needs to become in the form OriginalViewId#applets_position
Comment 5 Michail Vourlakos 2022-03-05 09:10:58 UTC
Git commit 21d87284989ecf2fba4a569daf0107b7230ed088 by Michail Vourlakos.
Committed on 05/03/2022 at 09:10.
Pushed by mvourlakos into branch 'master'.

tasks:fix launchers behavior in different applets

M  +10   -10   app/layouts/syncedlaunchers.cpp
M  +8    -8    app/layouts/syncedlaunchers.h
M  +2    -1    plasmoid/package/contents/ui/abilities/Launchers.qml
M  +1    -1    plasmoid/package/contents/ui/abilities/launchers/Syncer.qml

https://invent.kde.org/plasma/latte-dock/commit/21d87284989ecf2fba4a569daf0107b7230ed088
Comment 6 Michail Vourlakos 2022-03-05 09:12:45 UTC
(In reply to ryu.ketsueki from comment #2)
> (In reply to Michail Vourlakos from comment #1)
> > do you stlll have that issue with master version? is it possible to test
> > master version?
> 
> I just cloned from the Github repo and compiled, so I'm on master. It still
> happens

you can try again, I believe it is fixed now
Comment 7 ryu.ketsueki 2022-03-05 13:04:14 UTC
Can confirm it's fixed.