tasks:fix launchers behavior in different applets

BUG:450986