app/layouts/syncedlaunchers.h
@@ -45,16 +45,16 @@ public slots:
     Q_INVOKABLE void addAbilityClient(QQuickItem *client);
     Q_INVOKABLE void removeAbilityClient(QQuickItem *client);
 
-    Q_INVOKABLE void addLauncher(QString layoutName, uint senderId, int launcherGroup, int launcherGroupId, QString launcher);
-    Q_INVOKABLE void removeLauncher(QString layoutName, uint senderId, int launcherGroup, int launcherGroupId, QString launcher);
-    Q_INVOKABLE void addLauncherToActivity(QString layoutName, uint senderId, int launcherGroup,int launcherGroupId, QString launcher, QString activity);
-    Q_INVOKABLE void removeLauncherFromActivity(QString layoutName, uint senderId, int launcherGroup, int launcherGroupId, QString launcher, QString activity);
-    Q_INVOKABLE void urlsDropped(QString layoutName, uint senderId, int launcherGroup, int launcherGroupId, QStringList urls);
-    Q_INVOKABLE void validateLaunchersOrder(QString layoutName, uint senderId, int launcherGroup, int launcherGroupId, QStringList launchers);
+    Q_INVOKABLE void addLauncher(QString layoutName, uint senderId, int launcherGroup, QString launcherGroupId, QString launcher);
+    Q_INVOKABLE void removeLauncher(QString layoutName, uint senderId, int launcherGroup, QString launcherGroupId, QString launcher);
+    Q_INVOKABLE void addLauncherToActivity(QString layoutName, uint senderId, int launcherGroup,QString launcherGroupId, QString launcher, QString activity);
+    Q_INVOKABLE void removeLauncherFromActivity(QString layoutName, uint senderId, int launcherGroup, QString launcherGroupId, QString launcher, QString activity);
+    Q_INVOKABLE void urlsDropped(QString layoutName, uint senderId, int launcherGroup, QString launcherGroupId, QStringList urls);
+    Q_INVOKABLE void validateLaunchersOrder(QString layoutName, uint senderId, int launcherGroup, QString launcherGroupId, QStringList launchers);
 
 private:
-    QList<QQuickItem *> clients(QString layoutName, int groupId);
-    QList<QQuickItem *> clients(QString layoutName, uint senderId, Latte::Types::LaunchersGroup launcherGroup, int launcherGroupId);
+    QList<QQuickItem *> clients(QString layoutName, QString groupId);
+    QList<QQuickItem *> clients(QString layoutName, uint senderId, Latte::Types::LaunchersGroup launcherGroup, QString launcherGroupId);
     QQuickItem *client(const int &id);
 
 private slots:
